# hide-motd

./: .gitignore  CMakeLists.txt  README.md
addons/sourcemod/scripting/: hide-motd.sp  hide_motd.sp
